syntax = "proto3";
package proto;

message TokenRequest {
    repeated string claims = 1;
}

message TokenResponse {
    int32 status = 1;
    string token = 2;
    // TODO: expiry ?
}

service TokenProvider {
    rpc GetToken(TokenRequest) returns (TokenResponse);
}
